<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
   <group android:checkableBehavior="single">
       <item
           android:id="@+id/menu_acses"
           android:orderInCategory="1"
           app:showAsAction="never"
           android:title="@string/acses_string"/>
       <item
           android:id="@+id/menu_cesa"
           android:orderInCategory="2"
           app:showAsAction="never"
           android:title="@string/cesa_string"/>
       <item
           android:id="@+id/menu_eesa"
           android:orderInCategory="3"
           app:showAsAction="never"
           android:title="@string/eesa_string"/>
       <item
           android:id="@+id/menu_elesa"
           android:orderInCategory="4"
           app:showAsAction="never"
           android:title="@string/elesa_string"/>
       <item
           android:id="@+id/menu_mesamesc"
           android:orderInCategory="5"
           app:showAsAction="never"
           android:title="@string/mesamesc_string"/>
       <item
           android:id="@+id/menu_sait"
           android:orderInCategory="6"
           app:showAsAction="never"
           android:title="@string/sait_string"/>

   </group>
</menu>
